--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,129 @@ body {
     font-style: normal;
     font-weight: 400;
     background-color: #F7EFEE;
-  }
-  .container {
+    text-align: center;
+}
+
+body {
+    margin: 0;
+    font-family: minerva-modern, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    background-color: #F7EFEE;
+}
+
+  /* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #F7EFEE;
+}
+
+.topnav img {
+    float: left;
+    max-height: 98px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    max-width: 100px;
+}
+
+  /* Style the topnav links */
+.topnav a {
+    float: right;
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 25px 16px;
+    text-decoration: none;
+}
+
+  /* Change color on hover */
+.topnav a:hover {
+    text-decoration: underline;
+    color: #000000;
+}
+
+#heroGrid {
+    margin: 0px 5%;
+    display: grid;
+    min-height: 500px;
+    height: 70vh;
+}
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .item {
+    object-fit: contain;
+    width: 100%;
+}
+
+.item {
     height: 2px;
     margin-bottom: 30px;
-  }
+}
 
-  .myFlexedImage {
+.myFlexedImage {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-  }
+    width: 100%;
+    object-fit: contain;
+    border-radius: 4px;
+}
+
+.image {
+    max-width: 100%;
+    display: flex;
+    min-height: 207px;
+}
+
+img {
+    width: 450px;
+    margin-right: 20px;
+    flex-shrink: 0;
+}
+
+.footerLinks {
+    padding-top: 25px;
+    margin-left: 40px;
+    float: absolute;
+}
+
+.footerLinks a{
+    display: block;
+    color: #000000;
+    text-align: center;
+    text-decoration: none;
+    font-size: 11px;
+}
+.footerCopyright p{
+    font-family: 'minerva-modern', sans-serif;
+    color: #000000;
+    font-size: 11px;
+    text-align: center;
+    padding-top: 25px;
+    font-style: normal;
+}
+ul {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
+}
+.footerSocial img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+}
+
+.links{
+    color: #000000;
+    font-size: 30px;
+    padding: 10px;
+}
+#footerGrid {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
