--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body {
 }
 
 img {
-    width: 650px;
+    width: 100%;
     margin-right: 20px;
     flex-shrink: 0;
 }
@@ -132,18 +132,17 @@ ul {
 }
 
 
-  
-    body {
-      background-color: #F7EFEE;
-    }
-    
-    @media only screen and (max-width: 600px) {
-        .container{
+
+body {
+    background-color: #F7EFEE;
+}
+
+@media only screen and (max-width: 600px) {
+    .container{
         flex-direction: column;
         width: 100%;
-        }
-body {
-        background-color:#F7EFEE;
-      }
     }
- 
+    body {
+        background-color: yellow;
+    }
+}
